Revision history for Github-Fork-Parent

0.11    2011-05-09
        Parse https links too
        Modify tests to mirror github changes

0.10    2010-01-12
        Add 'github_parent_author'
        Fix error in test

0.01    2009-11-08
        First version.
