@@ -11,7 +11,6 @@ cover_db
 pod2htm*.tmp
 Github-Fork-Parent-*
 Makefile.PL
-META.yml
-MYMETA.yml
-MYMETA.json
+META.*
+MYMETA.*
 test.pl
