@@ -6,14 +6,15 @@ use warnings;
 use lib 'lib';
 use Test::More tests => 4;
 use Github::Fork::Parent;
+#$|=1;
 
 is(github_parent('git://github.com/chorny/cgi-session.git'),
- 'http://github.com/cromedome/cgi-session');
+ 'https://github.com/cromedome/cgi-session');
 #print github_parent('git://github.com/chorny/cgi-session.git'),"\n";
 #git://github.com/cromedome/cgi-session.git
 
 is(github_parent('git@github.com:chorny/test-more.git'),
- 'http://github.com/schwern/test-more');
+ 'https://github.com/schwern/test-more');
 is(github_parent_author('git@github.com:chorny/test-more.git'),
  'schwern');
 
